<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="6pt"
    android:paddingLeft="6pt"
    android:id="@+id/todayResult"
    android:background="#FFE6F8"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#464646"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/menu"
        android:src="@drawable/menu"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        android:paddingRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">

        <ImageView
            android:id="@+id/percent_Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:alpha="0.9"
            android:src="@drawable/resulttodaycirclered" />

        <TextView
            android:id="@+id/percent_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:text="0%"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="70dp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Time"
            android:textAlignment="center"
            android:textColor="#464646"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Todo"
            android:textAlignment="center"
            android:textColor="#464646"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Check"
            android:textAlignment="center"
            android:textColor="#464646"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_centerInParent="true"
        android:alpha="0.8"
        android:background="#464646" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:id="@+id/list_Calender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    </LinearLayout>
    </ScrollView>
</LinearLayout>